@@ -1639,3 +1639,5 @@
 	 contention (thanks, Mark Woodmass).
 20070515 configure.in,if1.c: check that fsync is available before using it
 	 (thanks, Stuart Brady) (Fred).
+20070515 debugger/{breakpoint.[ch],command.c},widget/debugger.c: add
+         more comprehensive widget debugger (patch #1150698) (Darren).
